<resources>
    <string name="app_name">PRATITI</string>
    <string name="login_google">Sign in with Google</string>
    <string name="login_facebook">FACEBOOK LOGIN</string>
    <string name="signup_google">Sign up with Google</string>
    <string name="signup_facebook">FACEBOOK SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="username">User name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="blood_group">Blood Group</string>
    <string name="select">Select</string>
    <string name="district">District</string>
    <string name="sign_up">SIGN UP</string>
    <string name="lorem">Lorem Ipsum is simply dummy It has survived not only five centuries.</string>
    <string name="next_quiz">Next quiz in</string>
    <string name="login_subtitle_one">TMC ACADEMIC CLUB</string>
    <string name="login_subtitle_two">Initiative of SFI TMC Unit</string>
    <string name="server_client_id">306486938474-ho74saph5pt14kka7p2uchcm9m22o06k.apps.googleusercontent.com</string>
    <string name="modules">Modules</string>
    <string name="home">Home</string>
    <string name="update">UPDATE</string>
    <string name="profile">Profile</string>
    <string name="banner_ad_unit_id">ca-app-pub-5476381757988116/8968833072</string>
    <string name="pdf_banner_ad_unit_id">ca-app-pub-5476381757988116/8242447838</string>
    <string name="facebook_app_id">1823383777782349</string>
    <string name="fb_login_protocol_scheme">fb1823383777782349</string>
    <string name="videos">Videos</string>
    <string name="Rs">\u20B9</string>

    <string name="title_activity_pdf_viewer">PdfViewer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
