<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/logo_main" android:contentDescription="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/g_signin"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:text="@string/login_facebook"
            android:background="@drawable/rounded_button"
            android:textColor="@drawable/button_text_color"
            android:textSize="18sp"
            android:typeface="monospace"
            android:drawableStart="@drawable/logo_facebook"
            android:drawableLeft="@drawable/logo_facebook" />

        <Button
            android:id="@+id/f_signin"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:text="@string/login_google"
            android:background="@drawable/rounded_button"
            android:textColor="@drawable/button_text_color"
            android:textSize="18sp"
            android:typeface="monospace"
            android:drawableStart="@drawable/logo_google"
            android:drawableLeft="@drawable/logo_google" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>