<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:indeterminate="true"
        android:layout_marginTop="-7dp"
        android:backgroundTint="@color/colorTransparentBlack"
        android:layout_alignParentTop="true"
        android:indeterminateTint="@color/colorSecondary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo_main"
            app:civ_border_color="@color/colorSecondary"
            app:civ_border_width="1dp" />

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/usernameLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/circleImageView"
            app:mtf_backgroundColor="@color/colorTransparentPrimaryLight"
            app:mtf_cardCollapsedHeight="2dp"
            app:mtf_image="@drawable/user_logo"
            app:mtf_labelColor="@color/colorTransparentWhite">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/username"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="18sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/emailLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/usernameLayout"
            app:mtf_backgroundColor="@color/colorTransparentPrimaryLight"
            app:mtf_cardCollapsedHeight="2dp"
            app:mtf_image="@drawable/mail_logo"
            app:mtf_labelColor="@color/colorTransparentWhite">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/email"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="18sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/mobileLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/emailLayout"
            app:mtf_backgroundColor="@color/colorTransparentPrimaryLight"
            app:mtf_cardCollapsedHeight="2dp"
            app:mtf_image="@drawable/mobile_logo"
            app:mtf_labelColor="@color/colorTransparentWhite">

            <EditText
                android:id="@+id/mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/mobile_no"
                android:inputType="phone"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="18sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/placeLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/mobileLayout"
            app:mtf_backgroundColor="@color/colorTransparentPrimaryLight"
            app:mtf_cardCollapsedHeight="2dp"
            app:mtf_image="@drawable/place_logo"
            app:mtf_labelColor="@color/colorTransparentWhite">

            <EditText
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/district"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="18sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/placeLayout"
            android:orientation="horizontal">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:mtf_backgroundColor="@color/colorTransparentPrimaryLight"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_image="@drawable/blood_logo"
                app:mtf_labelColor="@color/colorTransparentWhite">

                <EditText
                    android:id="@+id/bloodgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:hint="@string/blood_group"
                    android:textColor="@color/colorTransparentWhite"
                    android:textSize="18sp" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/sign_up"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="33dp"
                android:textSize="20sp"
                android:background="@drawable/rounded_button"
                android:text="@string/sign_up"
                android:textColor="@drawable/button_text_color" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>