<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/electric_violet">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:indeterminate="true"
        android:layout_marginTop="-7dp"
        android:backgroundTint="@color/colorTransparentBlack"
        android:layout_alignParentTop="true"
        android:indeterminateTint="@color/colorTransparentWhite"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/subTitleLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:srcCompat="@drawable/logo_main" android:contentDescription="@string/login" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="144dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="72dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitleLayout">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/f_signup"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textSize="18sp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/g_signup"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subTitleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_login"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/subTitleOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/login_subtitle_one"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subTitleTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/login_subtitle_two"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>